--- a/css/master.css
+++ b/css/master.css
@@ -1228,4 +1228,64 @@ a {
   .profile-page .info_box .toggle-switch {
     margin: auto;
   }
+}
+.profile-page .other__date .skills-card {
+  width: 45%;
+}
+.profile-page .other__date .skills-card ul {
+  list-style: none;
+  padding: 0px !important;
+}
+.profile-page .other__date .skills-card ul li {
+  padding: 20px 0;
+}
+.profile-page .other__date .skills-card ul li > span {
+  background-color: #eee;
+  padding: 3px 10px;
+  border-radius: 6px;
+  margin-right: 15px;
+  font-weight: normal;
+  box-shadow: 0 0 10px #ddd;
+  border: 1px solid #ddd;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.profile-page .other__date .skills-card ul li:not(:last-child) {
+  border-bottom: 1px solid #f1f1ff;
+}
+.profile-page .other__date .activites .box {
+  display: flex;
+  flex-direction: column;
+}
+.profile-page .other__date .activites .box .box1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0;
+}
+.profile-page .other__date .activites .box .box1:not(:last-child) {
+  border-bottom: 1px solid #ddd;
+}
+.profile-page .other__date .activites .box .box__active {
+  display: flex;
+  gap: 10px;
+}
+.profile-page .other__date .activites .box .box__active .header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+}
+.profile-page .other__date .activites .box .box__active img {
+  width: 64px;
+  height: 64px;
+}
+.profile-page .other__date .activites .box .box__time {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+  direction: rtl;
 }/*# sourceMappingURL=master.css.map */
