--- a/css/framework.scss
+++ b/css/framework.scss
@@ -29,6 +29,9 @@ $color-yellow:yellow;
 .c-yellow{
     color:$color-yellow ;
 }
+.bg-yellow{
+    background-color:$color-yellow ;
+}
 .c-linkedin {
     color: $linkedin-color;     
 }
