--- a/css/master.css
+++ b/css/master.css
@@ -1436,4 +1436,52 @@ a {
 }
 .project__page .project .header h3 {
   font-weight: 400 !important;
+}
+
+/**
+    courses__page
+*/
+.courses__page {
+  grid-template-columns: repeat(auto-fit, minmax(300px, 14.6rem));
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+@media (max-width: 767px) {
+  .courses__page {
+    grid-template-columns: minmax(200px, 1fr);
+  }
+}
+.courses__page .course .cover {
+  border-radius: 7px 7px 0 0;
+  width: 100%;
+}
+.courses__page .course .instructor {
+  border-radius: 50%;
+  border: 2px solid white;
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+.courses__page .course .info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 0px !important;
+}
+.courses__page .course .info span {
+  font-size: 13px;
+}
+.courses__page .course .content {
+  padding: 0 20px;
+  padding-bottom: 20px;
+}
+.courses__page .course .header {
+  padding: 20px 20px 0 20px;
+  padding-bottom: 0px;
+}
+.courses__page .course .header .description {
+  line-height: 1.6;
 }/*# sourceMappingURL=master.css.map */
