--- a/css/framework.scss
+++ b/css/framework.scss
@@ -335,7 +335,9 @@ $color-yellow:yellow;
 .p-relative {
     position: relative;
 }
-
+.pointer{
+    cursor: pointer;
+}
 .p-absolute {
     position: absolute;
 }
