--- a/css/master.css
+++ b/css/master.css
@@ -1571,4 +1571,89 @@ a {
 .Friends__page .friends .header span {
   font-size: 14px;
   padding: 10px;
+}
+
+.files__page .files__stats {
+  min-width: 260px !important;
+}
+.files__page .files__stats .icon {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.files__page .files__stats .size {
+  margin-left: auto;
+}
+.files__page .files__stats .orange {
+  background-color: rgba(245, 158, 11, 0.3);
+}
+.files__page .files__stats .red {
+  background-color: rgba(244, 67, 54, 0.3);
+}
+.files__page .files__stats .blue {
+  background-color: rgba(0, 117, 255, 0.3);
+}
+.files__page .files__stats .green {
+  background-color: rgba(34, 197, 94, 0.3);
+}
+.files__page .files__stats .upload {
+  margin: 15px auto 0;
+  padding: 10px 15px;
+  transition: 0.3s;
+  cursor: pointer;
+  color: white;
+  font-size: 14px;
+  box-shadow: 0 0 10px #ddd;
+}
+.files__page .files__stats .upload:hover {
+  background-color: #0d69d5;
+  box-shadow: none;
+}
+.files__page .files__stats .upload:hover i {
+  -webkit-animation: go-up 0.8s infinite;
+          animation: go-up 0.8s infinite;
+}
+
+@-webkit-keyframes go-up {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+}
+
+@keyframes go-up {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+}
+.files__page {
+  flex-direction: row-reverse !important;
+  align-items: flex-start;
+}
+.files__page .files__content {
+  flex: 1;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  align-items: flex-start;
+}
+.files__page .files__content .file .icon {
+  text-align: center;
+}
+.files__page .files__content .file .info {
+  border-top: 1px solid #ddd;
+}
+.files__page .files__content .file img {
+  width: 64px;
+  height: 64px;
+  transition: 0.3s;
+}
+.files__page .files__content .file:hover img {
+  transform: rotate(5deg);
 }/*# sourceMappingURL=master.css.map */
