--- a/css/master.css
+++ b/css/master.css
@@ -1638,6 +1638,14 @@ a {
   flex-direction: row-reverse !important;
   align-items: flex-start;
 }
+@media (max-width: 767px) {
+  .files__page {
+    display: flex !important;
+    flex-direction: column !important;
+    justify-content: center !important;
+    align-items: center;
+  }
+}
 .files__page .files__content {
   flex: 1;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -1656,4 +1664,66 @@ a {
 }
 .files__page .files__content .file:hover img {
   transform: rotate(5deg);
+}
+
+.fa-check-square {
+  color: #22c55e;
+}
+
+.plans-page {
+  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+}
+@media (max-width: 767px) {
+  .plans-page {
+    grid-template-columns: minmax(250px, 1fr);
+    margin-left: 10px;
+    margin-right: 10px;
+    gap: 10px;
+  }
+}
+.plans-page .plan .price {
+  position: relative;
+  font-size: 40px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: auto;
+}
+.plans-page .plan .price span {
+  position: absolute;
+  left: -20px;
+  top: 0;
+  font-size: 25px;
+}
+.plans-page .plan ul {
+  list-style: none;
+  padding-left: 0;
+}
+.plans-page .plan ul li {
+  padding: 15px 0;
+  display: flex;
+  align-items: center;
+  font-size: 15px;
+  border-bottom: 1px solid #EEE;
+}
+.plans-page .plan ul li i {
+  margin-right: 10px;
+}
+.plans-page .plan ul li .help {
+  cursor: pointer;
+  color: #888;
+  margin-left: auto;
+}
+.plans-page .top {
+  border: 3px solid white;
+  outline: 3px solid transparent;
+}
+.plans-page .plan.green .top {
+  outline-color: #22c55e;
+}
+.plans-page .plan.blue .top {
+  outline-color: #0075ff;
+}
+.plans-page .plan.orange .top {
+  outline-color: #f59e0b;
 }/*# sourceMappingURL=master.css.map */
